--- a/index.qmd
+++ b/index.qmd
@@ -78,4 +78,4 @@ Plotly was found to be the most suitable library to create interactive visualiza
 
 The horizontal bar graph which plots each state against its corresponding crime count displays a noticeable difference in crime count per state. The states with the most crime experience a crime rate 30x higher than those with lower crime rates.
 
-The interactive scatter-plot does not present any noticeable correlations worth studying further regarding a connection to crime count and number of cartel's known to be present in the state. Further data is needed before confirming/canceling out any possible correlations. The lack of a noticeable correlation could be due to the number of cartels not being a strong indicator of cartel activity in the area. For instance.
+The interactive scatter-plot does not present any noticeable correlations worth studying further regarding a connection to crime count and number of cartel's known to be present in the state. Further data is needed before confirming/canceling out any possible correlations. The lack of a noticeable correlation could be due to the number of cartels not being a strong indicator of cartel activity in the area.
