--- a/index.qmd
+++ b/index.qmd
@@ -66,7 +66,7 @@ print('New Dataframe Shape:', cartels.shape)
 
 Plotly was found to be the most suitable library to create interactive visualizations.
 
-**First Interactive Visual:** The first interactive visualization created is an interactive horizontal bar graph. Each bar representing a state plotted against the crime rate reported in that state from 2015-2022. The first dataset was used for this graph. To make the dataset easier to work with, I cleaned the dataset by removing any rows with zero counts of crime, condensed the years from 2015-2022 to 2019-2022, and then aggregated the crime counts per state. I was then able to use Plotly to graph the crime counts per state, from the years 2019-2022. I cleaned the graph by removing any non-state entities included in the graph and matching the grammar to match that of the other dataset used,
+**First Interactive Visual:** The first interactive visualization created is an interactive horizontal bar graph. Each bar representing a state plotted against the crime rate reported in that state from 2015-2022. The first dataset was used for this graph. To make the dataset easier to work with, I cleaned the dataset by removing any rows with zero counts of crime, condensed the years from 2015-2022 to 2019-2022, and then aggregated the crime counts per state. I was then able to use Plotly to graph the crime counts per state, from the years 2019-2022. I cleaned the graph by removing any non-state entities included in the graph and matching the grammar to match that of the other dataset used.
 
 **Second Interactive Visualization:** The second interactive visualization is an interactive scatter plot. This graph required the datasets to be merged together. To begin, the second dataset, *BACRIM2020_Nodes,* was filtered by removing each individual cartel listed per state and instead creating a new column providing a count of known cartels associated with the area. The new column, as well as the 'State' column was then merged with the 'State' and 'Count' column of the first dataset. This resulted in a DataFrame containing columns listing the crime and cartel count per state. The crime count and cartel count were then plotted against each other in a scatter plot with the state being represented by the hue.
 
