--- a/index.qmd
+++ b/index.qmd
@@ -68,12 +68,20 @@ Plotly was found to be the most suitable library to create interactive visualiza
 
 **First Interactive Visual:** The first interactive visualization created is an interactive horizontal bar graph. Each bar representing a state plotted against the crime rate reported in that state from 2015-2022. The first dataset was used for this graph. To make the dataset easier to work with, I cleaned the dataset by removing any rows with zero counts of crime, condensed the years from 2015-2022 to 2019-2022, and then aggregated the crime counts per state. I was then able to use Plotly to graph the crime counts per state, from the years 2019-2022. I cleaned the graph by removing any non-state entities included in the graph and matching the grammar to match that of the other dataset used.
 
+![](images/visual_2.png)
+
 **Second Interactive Visualization:** The second interactive visualization is an interactive scatter plot. This graph required the datasets to be merged together. To begin, the second dataset, *BACRIM2020_Nodes,* was filtered by removing each individual cartel listed per state and instead creating a new column providing a count of known cartels associated with the area. The new column, as well as the 'State' column was then merged with the 'State' and 'Count' column of the first dataset. This resulted in a DataFrame containing columns listing the crime and cartel count per state. The crime count and cartel count were then plotted against each other in a scatter plot with the state being represented by the hue.
 
+![](images/visual_2.png){fig-align="center"}
+
 **Interactive Dashboard:** The interactive dashboard was built using Plotly's graphing library (Dash). The new dataset was created for the dashboard by aggregating and merging the first DataFrame. First, all columns but the year, entity , type_of_crime , and count were removed. The subtype count columns were aggregate to create a new column that adds up all subtype crimes committed per crime type, for each state and year. Dash app was then utilized to create a line graph that plotted the year against the crime count. Two drop-down menus were created that allow the user to choose a value for the state and crime type the user would like to see plotted on the line graph.
+
+![](images/Dash_code_1.png){fig-align="center"}
+
+![](images/Dash_code_2.png)
 
 ## Results & Conclusions:
 
 The horizontal bar graph which plots each state against its corresponding crime count displays a noticeable difference in crime count per state. The states with the most crime experience a crime rate 30x higher than those with lower crime rates.
 
-The interactive scatter-plot does not present any noticeable correlations worth studying further regarding a connection to crime count and number of cartel's known to be present in the state. Further data is needed before confirming/canceling out any possible correlations. The lack of a noticeable correlation could be due to the number of cartels not being a strong indicator of cartel activity in the area.
+The interactive scatter-plot does not present any noticeable correlations worth studying further regarding a connection to crime count and number of cartel's known to be present in the state. Further data is needed before confirming/canceling out any possible correlations. For example, Guerero has 12 associated cartels with 3.5x less crime than Nuevo Leon, a state with only one cartel present. It could be that the cartel in Nuevo Leon is a much larger organization that does not allow for other cartels to inhabit the area. Thus, lack of a noticeable correlation could be due to the number of cartels not being a strong indicator of cartel activity in the area.
